Initial commit for Lab 6

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -19,10 +19,14 @@
     <script src='/blog/add/add.controller.js'></script>
     <script src='/blog/edit/edit.controller.js'></script>
     <script src='/blog/delete/delete.controller.js'></script>
+    <script src='/auth/register/register.controller.js'></script>
+    <script src='/auth/login/login.controller.js'></script>
     <script src='/common/directives/footerGeneric/footerGeneric.directive.js'></script>
     <script src='/common/directives/pageHeader/pageHeader.directive.js'></script>
     <script src='/common/directives/navigation/navigation.directive.js'></script>
+    <script src='/common/directives/navigation/navigation.controller.js'></script>
     <script src='/common/services/blogData.service.js'></script>
+    <script src='/common/services/authentication.service.js'></script>
     <script src='/lib/ui-bootstrap-custom-2.5.0.min.js'></script>
     <script src='/lib/ui-bootstrap-custom-tpls-2.5.0.min.js'></script>
   </body>
