--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -3,19 +3,25 @@
     <div class='navbar-header'>
       <a class='navbar-brand' href='/'>My Blog</a>
       <button class='navbar-toggle' data-toggle='collapse' data-target='#navbar-main'>
-	<span class='icon-bar'></span>
-	<span class='icon-bar'></span>
-	<span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
       </button>
     </div>
     <div id='navbar-main' class='navbar-collapse collapse'>
       <ul class='nav navbar-nav'>
-	<li>
-	  <a href='blog/list'>List Blogs</a>
-	</li>
-	<li>
-	  <a href='blog/add'>Add Blog</a>
-	</li>
+        <li>
+          <a href='blog/list'>List Blogs</a>
+        </li>
+        <li ng-show="navvm.isLoggedIn">
+          <a href='blog/add'>Add Blog</a>
+        </li>
+        <li ng-hide="navvm.isLoggedIn">
+          <a href="login/?page={{ navvm.currentPath }}">Sign in</a>
+        </li>
+        <li ng-show="navvm.isLoggedIn">
+          <a href="" ng-click="navvm.logout()">Logout <small>({{ navvm.currentUser.email }})</small></a>
+        </li>
       </ul>
     </div>
   </div>  
