--- a/app_client/auth/login/login.view.html
+++ b/app_client/auth/login/login.view.html
@@ -5,11 +5,11 @@
         <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+            <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email" autocomplete="username">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+            <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password" autocomplete="current-password">
         </div>
         <button type="submit" class="btn btn-default">Sign in!</button>
     </form>
