--- a/app_client/index.html
+++ b/app_client/index.html
@@ -15,6 +15,7 @@
     <script src='/app.js'></script>
     <script src='/lib/angular-route.min.js'></script>
     <script src='/home/home.controller.js'></script>
+    <script src='/ticTacToe/ticTacToe.controller.js'></script>
     <script src='/blog/list/list.controller.js'></script>
     <script src='/blog/add/add.controller.js'></script>
     <script src='/blog/edit/edit.controller.js'></script>
@@ -27,6 +28,7 @@
     <script src='/common/directives/navigation/navigation.controller.js'></script>
     <script src='/common/services/blogData.service.js'></script>
     <script src='/common/services/authentication.service.js'></script>
+    <script src='/common/services/ticTacToe.service.js'></script>
     <script src='/lib/ui-bootstrap-custom-2.5.0.min.js'></script>
     <script src='/lib/ui-bootstrap-custom-tpls-2.5.0.min.js'></script>
   </body>
